--- a/src/FSharp.Project.FileOrderer.Runner/FSharp.Project.FileOrderer.Runner.fsproj
+++ b/src/FSharp.Project.FileOrderer.Runner/FSharp.Project.FileOrderer.Runner.fsproj
@@ -1,16 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Program.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\FSharp.Project.FileOrderer\FSharp.Project.FileOrderer.fsproj" />
   </ItemGroup>
-
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
