--- a/src/FSharp.Project.FileOrderer/FSharp.Project.FileOrderer.fsproj
+++ b/src/FSharp.Project.FileOrderer/FSharp.Project.FileOrderer.fsproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageVersion>0.0.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Library.fs" />
