Added Files.fs to project file

--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -5,6 +5,7 @@
     <PackageVersion>0.0.0</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Files.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
