--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageVersion>0.0.0</PackageVersion>
   </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="Library.fs" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+
 </Project>
