--- a/src/Mechanic.Tests/Mechanic.Tests.fsproj
+++ b/src/Mechanic.Tests/Mechanic.Tests.fsproj
@@ -5,7 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="Forge.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
