--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Xml.fs" />
     <Compile Include="Files.fs" />
     <Compile Include="AstTraverse.fs" />
+    <Compile Include="GraphAlg.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
