Move modules into separate files.

--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -5,6 +5,9 @@
   <ItemGroup>
     <Compile Include="AstTraverse.fs" />
     <Compile Include="GraphAlg.fs" />
+    <Compile Include="AstSymbolCollector.fs" />
+    <Compile Include="SymbolGetter.fs" />
+    <Compile Include="SymbolGraph.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
