--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Environment.fs" />  
     <Compile Include="Xml.fs" />
     <Compile Include="Files.fs" />
     <Compile Include="Library.fs" />
