--- a/src/Mechanic.CommandLine/Mechanic.CommandLine.fsproj
+++ b/src/Mechanic.CommandLine/Mechanic.CommandLine.fsproj
@@ -11,5 +11,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Mechanic\Mechanic.fsproj" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
