--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="SymbolGetter.fs" />
     <Compile Include="SymbolGraph.fs" />
     <Compile Include="Library.fs" />
+  <DotNetCliToolReference Include="dotnet-proj-info" Version="*" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
