--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,10 +10,10 @@
     <Compile Include="GraphAlg.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="AstSymbolCollector.fs" />
+    <Compile Include="ProjectCracker.fs" />
     <Compile Include="SymbolGetter.fs" />
     <Compile Include="SymbolGraph.fs" />
     <Compile Include="Library.fs" />
-  <DotNetCliToolReference Include="dotnet-proj-info" Version="*" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
