--- a/src/Mechanic/Mechanic.fsproj
+++ b/src/Mechanic/Mechanic.fsproj
@@ -1,8 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\paket-files\Microsoft\visualfsharp\src\fsharp\FSharp.Build\Fsc.fs">
+      <Paket>True</Paket>
+      <Link>paket-files/Fsc.fs</Link>
+    </Compile>
     <Compile Include="Environment.fs" />
     <Compile Include="Xml.fs" />
     <Compile Include="Files.fs" />
