--- a/src/Mechanic.NetcoreCliTool/Mechanic.NetcoreCliTool.fsproj
+++ b/src/Mechanic.NetcoreCliTool/Mechanic.NetcoreCliTool.fsproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,5 +17,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Mechanic\Mechanic.fsproj" />
   </ItemGroup>
-
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
